--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,11 @@
 = Chronicle-Accelerate
 Peter Lawrey, Sabrina Rai
  
+ 
+[#image-maven]
+[caption="", link=https://maven-badges.herokuapp.com/maven-central/net.openhft/chronicle-queue]
+image::https://maven-badges.herokuapp.com/maven-central/net.openhft/chronicle-queue/badge.svg[]
+
 
 
 == Chronicle-Accelerate (XCL)
