--- a/README.adoc
+++ b/README.adoc
@@ -11,7 +11,9 @@ XCL is a new cryptocurrency project that, learning from the previous Blockchain 
 
 The XCL platform combines low latencies (sub millisecond), IoT transaction rates (millions/s), open source AI volatility controls and blockchain for transfer of value and exchange of value for virtual fiat and crypto currencies. This system could be extended to other asset classes such as securities and fixed income. It uses a federated services model and regionalized payment systems making it more scalable than a blockchain which requires global consensus.
 
-The platform makes use of https://github.com/OpenHFT/Chronicle-Salt/blob/master/README.adoc[Chronicle-Salt] for encryption and https://github.com/OpenHFT/Chronicle-Bytes[Chronicle-Bytes] add description -what is chronicle-bytes for?
+The platform makes use of https://github.com/OpenHFT/Chronicle-Salt/blob/master/README.adoc[Chronicle-Salt] for encryption and https://github.com/OpenHFT/Chronicle-Bytes[Chronicle-Bytes]. Chronicle Bytes contains all the low level memory access wrappers. It is built on Chronicle Core’s direct memory and OS system call access.
+
+Chronicle Bytes has a similar purpose to Java NIO’s ByteBuffer with some extensions.
 
 
 == Message Types
